# pdfsplit

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.txt
man/: pdfsplit.1
pdfsplit/: pdfsplit.py
